# Quartopy

./: .gitignore  GEMINI.md  README.md  __init__.py  main.py  play_game.py  pyproject.toml  quarto_CLI.py  requirements.txt
bot/: human.py  random_bot.py
data/: games.csv
partidas_guardadas/: 2025-12-21_15-19-42_match001.csv  2025-12-21_15-32-16_match001.csv  2025-12-21_15-33-04_match001.csv  2025-12-21_15-33-37_match001.csv  2025-12-21_19-28-12_match001.csv  2026-01-07_14-52-15_match001.csv  2026-01-09_11-35-10_match001.csv  2026-01-09_12-00-14_match001.csv  2026-01-09_12-33-50_match001.csv  2026-01-09_12-36-02_match001.csv  2026-01-09_12-41-29_match001.csv  2026-01-09_13-01-13_match001.csv  2026-01-09_13-04-03_match001.csv  2026-01-09_20-24-41_match001.csv  2026-01-09_21-38-22_match001.csv  2026-01-09_21-56-25_match001.csv  2026-01-09_22-03-07_match001.csv  2026-01-12_11-05-53_match001.csv
quartopy/: __init__.py  run_gui.py
quartopy/bot/: human.py  minimax_bot.py  random_bot.py
quartopy/game/: board.py  piece.py  play.py  quarto_game.py
quartopy/gui/: main_window.py
quartopy/gui/screens/: add_bot_screen.py  game_board.py  menu_screen.py  record_screen.py  start_screen.py  type_player.py
quartopy/models/: Bot.py  CNN_uncoupled.py  __init__.py  board.py  piece.py
quartopy/utils/: display.py  file_io.py  game_saver.py  logger.py
tests/: view_conversion.ipynb  view_match.ipynb
